# norde_maison

./: .gitignore  localhost+2-key.pem  localhost+2.crt  localhost+2.key  localhost+2.pem  manage.py  pyproject.toml  readme.md
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
catalog/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_product_material_alter_productimage_image.py  0004_alter_product_price_alter_productvariant_stock.py  0005_alter_category_options_subcategory_description_and_more.py  0006_remove_category_is_material.py  0007_alter_category_options.py  0008_alter_productvariant_options_product_price_byn_and_more.py  0009_remove_product_price.py
favorites/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py  0002_alter_favorite_options_alter_favorite_created_at_and_more.py
norde_maison/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  apps.py  email_service.py  forms.py  models.py  reports.py  serializers.py  signals.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options_alter_orderitem_options_and_more.py  0003_alter_order_options.py  0004_order_delivery_extra.py  0012_report.py  (+8 more)
scripts/: seed_products.py
shop_config/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  email_service.py  models.py  serializers.py  urls.py  views.py
(+30 files in other folders)
